--- a/pom.xml
+++ b/pom.xml
@@ -4,18 +4,100 @@
   <groupId>com.vtcmer.app</groupId>
   <artifactId>springrestapi</artifactId>
   <packaging>war</packaging>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0.0</version>
   <name>springrestapi Maven Webapp</name>
   <url>http://maven.apache.org</url>
+ 
+   <properties>
+       <springframework.version>4.2.0.RELEASE</springframework.version>
+       <jackson.version>2.5.3</jackson.version>
+       <junit.version>4.11</junit.version>
+   </properties>
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${springframework.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>${springframework.version}</version>
+        </dependency>
+ 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+    
   </dependencies>
   <build>
-    <finalName>springrestapi</finalName>
+    <finalName>SpringRestApiI</finalName>
+    
+    <pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-war-plugin</artifactId>
+					<version>2.4</version>
+					<configuration>
+						<warSourceDirectory>src/main/webapp</warSourceDirectory>
+						<warName>SpringRestApiI</warName>
+						<failOnMissingWebXml>false</failOnMissingWebXml>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+    
+   
+    
+    <plugins>
+    	
+    	 <plugin>
+	          <groupId>org.apache.maven.plugins</groupId>
+	          <artifactId>maven-compiler-plugin</artifactId>
+	          <version>2.5.1</version>
+	          <configuration>
+	              <source>1.7</source>
+	              <target>1.7</target>
+	              <compilerArgument>-Xlint:all</compilerArgument>
+	              <showWarnings>true</showWarnings>
+	              <showDeprecation>true</showDeprecation>
+	          </configuration>
+         </plugin>
+    
+       	 <plugin>
+			<groupId>org.eclipse.jetty</groupId>
+  			<artifactId>jetty-maven-plugin</artifactId>
+			<version>9.0.5.v20130815</version>
+			<configuration>
+				<connectors>
+				<webApp>
+				     <contextPath>/SpringRestApiI</contextPath>
+				</webApp>	
+					<connector 	implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+					<port>9090</port>
+					</connector>
+				</connectors>
+			</configuration>
+		</plugin>
+     
+    </plugins>
+    
   </build>
+ 
 </project>
